--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <!-- Logo Section -->
     <div class="logo">
-        <img src="https://ibb.co/VMYTBRg" alt="Logo" class="logo-image">
+        <img src="https://i.ibb.co/FBBsgCJ/logo.png" alt="Logo" class="logo-image">
     </div>
 
     <!-- Movie Catalog Section -->
     <h1>Movie Catalog</h1>
     <div class="catalog">
         <div class="movie">
-            <img src="https://via.placeholder.com/150x150?text=Red+One" alt="Red One">
+            <img src="https://upload.wikimedia.org/wikipedia/en/2/25/Red_One_poster.jpg" alt="Red One">
             <p>Red One</p>
         </div>
         <div class="movie">
