--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <div class="snowfall"></div>
     <h1>Movie Catalog</h1>
+    
+    <!-- Add the logo here below the header -->
+    <div class="logo-container">
+        <img src="https://i.ibb.co/VMYTBRg/logo.png" alt="Movie Catalog Logo" class="logo">
+    </div>
+    
     <div class="catalog">
         <div class="movie">
             <a href="https://1237jack.github.io/6578568568658Red6587695686578/" target="_blank">
