--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <!-- Movie 2 -->
         <div class="movie">
             <a href="https://example.com/movie2" target="_blank">
-                <img src="https://via.placeholder.com/150" alt="Placeholder for Movie 2">
-                <h2>Movie Title 2</h2>
+                <img src="https://i.ibb.co/gVMbRG2/Violent-Night.webp" alt="Placeholder for Movie 2">
+                <h2>violent night 4k</h2>
             </a>
         </div>
         <!-- Movie 3 -->
