--- a/index.html
+++ b/index.html
@@ -27,21 +27,21 @@
         <!-- Movie 2 -->
         <div class="movie">
             <a href="https://1237jack.github.io/fdgdfgdfVfgfgefdgiolintijndfgbiujdfngiuhdjbngijbnfd/" target="_blank">
-                <img src="https://i.ibb.co/gVMbRG2/Violent-Night.webp" alt="Placeholder for Movie 2">
-                <h2>violent night 4k [R]</h2>
+                <img src="https://i.ibb.co/gVMbRG2/Violent-Night.webp" alt="Violent Night movie poster">
+                <h2>Violent Night 4K [R]</h2>
             </a>
         </div>
         <!-- Movie 3 -->
         <div class="movie">
             <a href="https://example.com/movie3" target="_blank">
-                <img src="https://i.ibb.co/5B3QQVb/images-7.jpg" alt="Placeholder for Movie 3">
+                <img src="https://i.ibb.co/5B3QQVb/images-7.jpg" alt="Home Alone movie poster">
                 <h2>Home Alone HD [pg]</h2>
             </a>
         </div>
         <!-- Movie 4 -->
         <div class="movie">
             <a href="https://example.com/movie4" target="_blank">
-                <img src="https://i.ibb.co/2YXHVQj/images-8.jpg" alt="Placeholder for Movie 4">
+                <img src="https://i.ibb.co/2YXHVQj/images-8.jpg" alt="Home Alone 2 movie poster">
                 <h2>Home Alone 2 HD [pg]</h2>
             </a>
         </div>
