--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
         </div>
         <!-- Movie 3 -->
         <div class="movie">
-            <a href="https://ia802901.us.archive.org/4/items/hdghjdhfgbsndvhmuk/hdghjdhfgbsndvhmuk.mp4" target="_blank">
+            <a href="https://example.com/movie3" target="_blank">
                 <img src="https://i.ibb.co/5B3QQVb/images-7.jpg" alt="Home Alone movie poster">
                 <h2>Home Alone HD [pg]</h2>
             </a>
         </div>
         <!-- Movie 4 -->
         <div class="movie">
-            <a href="https://ia902901.us.archive.org/28/items/vcbnvcbn-gcfbvncm-c/vcbnvcbn%20gcfbvncm%20c.mp4" target="_blank">
+            <a href="https://example.com/movie4" target="_blank">
                 <img src="https://i.ibb.co/2YXHVQj/images-8.jpg" alt="Home Alone 2 movie poster">
                 <h2>Home Alone 2 HD [pg]</h2>
             </a>
