--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <!-- Movie 3 -->
         <div class="movie">
-            <a href="https://example.com/movie3" target="_blank">
+            <a href="https://1237jack.github.io/dfjhsbg-iujksrhnguojkrnhgn/" target="_blank">
                 <img src="https://i.ibb.co/5B3QQVb/images-7.jpg" alt="Home Alone movie poster">
                 <h2>Home Alone HD [pg]</h2>
             </a>
